--- a/pycg/render.yaml
+++ b/pycg/render.yaml
@@ -1,2 +1,1 @@
-blender_base: /home/huangjh/shared-home/subsystem/blender-2.90.0-linux64/blender
-
+blender_base: /home/huangjh/shared-home/subsystem/blender-3.3.1-linux-x64/blender
