--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,12 @@ name: Publish to PyPI.org
 on:
   release:
     types: [published]
-  workflow_dispatch
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
 jobs:
   pypi:
     runs-on: ubuntu-latest
